# vehicle-tracking

./: .gitignore  .replit  ANNUAL_TAX_FEATURE.md  ARCHITECTURE_DIAGRAM.md  AUDIT_SUMMARY.md  AUTHENTICATION_VERIFICATION.md  FORM_AUDIT_REPORT.md  FRONTEND_ERROR_INTEGRATION_PLAN.md  FUEL_TRACKING_IMPLEMENTATION.md  Home.py  MIGRATION_PLAN_DETAILED.md  NEXT_STEPS.md  README.md  SECURITY_AUDIT_ENVIRONMENT.md  SUPER_ADMIN_INTEGRATION.md  SUPER_ADMIN_TESTING.md  TESTING_GUIDE.md  TEST_DATA_SUMMARY.md  app.py  auth.py  cache_manager.py  database.py  migration_audit.md  migration_enum.py  models.py  package-lock.json  package.json  pagination.py  pyproject.toml  replit.md  telegram_bot.py  test-roles.sh  test-super-admin.py  translations.py  utils.py  utils_auth.py  vehicles_20251013_165714.csv  vercel.json
.claude/: claude.md
.streamlit/: config.toml
attached_assets/: Pasted---1755089197087_1755089197088.txt  Pasted---1755090705312_1755090705312.txt  Pasted---1755093126085_1755093126085.txt  Pasted---1755093277060_1755093277062.txt  Pasted---1755094301327_1755094301329.txt  Pasted--ER-1--1755086674106_1755086674106.txt  Pasted--Enum-CREATE-TYPE-vehicle-status-AS-ENUM-active-repair-unavailable-CREATE-TYPE-use-1755086632277_1755086632279.txt  Pasted--There-are-multiple-button-elements-with-the-same-auto-generated-ID-When-1755166000157_1755166000158.txt  Pasted-SyntaxError-This-app-has-encountered-an-error-The-original-error-message-is-redacted-to-prevent-da-1756836730835_1756836730837.txt  (+6 more)
autocvs/: vehicles.csv
nextjs-app/: .env.example  .env.test.example  PAGES_REPORT.md  (+20 more)
(+316 files in other folders)
