[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "djaodjin-pages>=0.8.5",
    "pandas>=2.3.1",
    "pdf2image>=1.17.0",
    "pillow>=11.3.0",
    "plotly>=6.3.0",
    "psycopg2-binary>=2.9.10",
    "python-telegram-bot>=22.3",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.48.1",
    "telegram>=0.0.1",
]
